styles: media 1px gap menu fix, home bg adjust

--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ img {
   padding-top: var(--mb-1);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .nav_menu {
     position: fixed;
     top: -100%;
@@ -287,7 +287,7 @@ img {
 
 /* Home */
 .home {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/kks_all.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.4)), url(img/kks_all.jpg);
   background-position: center;
   background-repeat: no-repeat;
   object-fit: cover;
@@ -302,7 +302,8 @@ img {
 
 .home_title {
   font-size: var(--big-font-size);
-  color: var(--first-color);
+  font-weight: var(--font-medium);
+  color: var(--text-color);
   margin-bottom: var(--mb-1);
 }
 
